--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -5,4 +5,5 @@
     background-repeat: no-repeat;
     background-blend-mode: darken;
     background-image: url('https://images.unsplash.com/photo-1506544777-64cfbe1142df?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');
+    margin-bottom: 50px;
 }
