--- a/src/Components/Navbar/NavBarTest.css
+++ b/src/Components/Navbar/NavBarTest.css
@@ -13,6 +13,13 @@ body {
 
 /* Navbar section */
 
+h2 {
+    color: white;
+    margin: 0;
+    font-size: 2.5rem;
+    box-shadow: black 2px;
+}
+
 .nav {
     width: 100%;
     height: 65px;
