--- a/src/Components/AboutHero/AboutHero.css
+++ b/src/Components/AboutHero/AboutHero.css
@@ -5,20 +5,5 @@
     background-image: url('https://wallpapers.com/images/featured/305kescxw5dpup7y.jpg');
     margin-bottom: 50px;
     background-blend-mode: lighten;
-    text-align: center;
-    justify-content: center;
-    vertical-align: center;
-    text-align: center;
-    align-items: center;
-}
-
-.AboutHeroText {
-    padding-bottom: 100px;
-    font-size: 5rem;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    align-self: center;
-    margin-top: 100px;
+    background-position: center;
 }
