--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,12 @@
 * {
     overflow-x: hidden;
 }
+
+.MuiPaper-root {
+    box-shadow: none;
+}
+
+.css-iocxey-MuiPaper-root {
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); /* Replace the values with the appropriate elevation level for your design */
+    border-bottom: none;
+}
