--- a/src/Components/Gallerygrid/GalleryGrid.css
+++ b/src/Components/Gallerygrid/GalleryGrid.css
@@ -1,5 +1,3 @@
-
-
 .wrap-container {
     margin: 2rem;
     overflow-y: hidden;
@@ -12,4 +10,24 @@ img {
 
 h3 {
     font-size: 3rem;
+}
+
+.DetailsWrapper {
+    background: radial-gradient(
+        circle at 24.1% 68.8%,
+        rgb(50, 50, 50) 0%,
+        rgb(0, 0, 0) 99.4%
+    );
+}
+
+button {
+    width: 100px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link {
+    text-decoration: none;
 }
