--- a/src/Components/ContactForm/ContactForm.css
+++ b/src/Components/ContactForm/ContactForm.css
@@ -1,17 +1,30 @@
-.formWrapper {
-    margin: 0 auto;
-    justify-content: center;
-    height: 400px;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+body {
+    background-color: #fcfcfc;
+}
+.block {
     width: 100%;
-    background-color: aqua;
+    margin: 0 auto;
+    max-width: 900px;
+    padding: 50px 30px;
 }
-
-Form {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.SubmitButton {
-    
+.input-res {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font: 15px/1 'Open Sans', sans-serif;
+    color: #333;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    width: 100%;
+    background-color: #ddd;
+    border: none;
+    padding: 10px 11px 11px 11px;
+    border-radius: 3px;
+    box-shadow: none;
+    outline: none;
+    margin: 0;
+    box-sizing: border-box;
+    margin-bottom: 20px;
 }
