--- a/src/main.css
+++ b/src/main.css
@@ -10,3 +10,14 @@
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); /* Replace the values with the appropriate elevation level for your design */
     border-bottom: none;
 }
+
+.darkToggler {
+    margin: 0 auto;
+    margin-bottom: 50px;
+    width: 200px;
+    border-radius: 50px;
+    background-color: #333;
+    color: #ccc;
+    font-weight: 700;
+    font-size: 1.8rem;
+}
